TASK 2 : Build the Docker image with dockerfile

--- a/templates/index.html
+++ b/templates/index.html
@@ -74,8 +74,8 @@
                             <td class="border px-4 py-2">
                                 <a class="px-4 py-1 bg-green-500 text-white rounded-md hover:bg-green-600"
                                     href="/update/{{ todo.id }}">Update</a>
-                                <a class="px-4 py-1 bg-red-500 text-white rounded-md hover:bg-red-600 ms-1"
-                                    href="/delete/{{ todo.id }}">Delete</a>
+                                <a class="px-4 py-1 bg-red-500 text-white rounded-md hover:bg-red-600 ms-2"
+                                    href="/delete/{{ todo.id }}">Delete</a> <!-- Increased margin to prevent overlap -->
                             </td>
                         </tr>
                         {% endfor %}
